--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical">
 
     <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:text="Kreator zamowienia kawy"
+        android:textSize="30dp"
+        android:textAlignment="center"
+        android:background="#BC6712"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_margin="20dp"
+        android:layout_gravity="center">
+    <RadioGroup
+        android:id="@+id/kawa_radiogroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:padding="10dp"
+        android:layout_margin="10dp"
+        >
+        <RadioButton
+            android:id="@+id/espresso_radiobatton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="espresso"
+            />
+        <RadioButton
+            android:id="@+id/cappucino_radiobatton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="cappuccino"
+            />
+        <RadioButton
+            android:id="@+id/latte_radiobatton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="latte"
+            />
+    </RadioGroup>
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:contentDescription="old Kotlin"
+        android:scaleType="centerCrop"
+        android:src="@drawable/capuccino"
+        />
+    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
