--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,6 +61,31 @@
         android:src="@drawable/capuccino"
         />
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="#BC6712"
+        ></View>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="20dp">
+        <CheckBox
+            android:id="@+id/mleko"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="mleko"
+            android:layout_margin="10dp"
+            />
+        <CheckBox
+            android:id="@+id/cukier"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="cukier"
+            android:layout_margin="10dp"
+            />
+    </LinearLayout>
 
 
 </LinearLayout>
