--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,6 +86,21 @@
             android:layout_margin="10dp"
             />
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="#BC6712"
+        ></View>
 
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:max="100"
+        android:progress="10"
+        android:progressBackgroundTint="#EB7D07"
+        android:progressTint="@color/black"
+        android:thumbTint="@color/black"
+        />
 
 </LinearLayout>
