--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,15 +99,43 @@
         android:background="#BC6712"
         android:textColor="@color/black"
         />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_margin="20dp"
+        android:layout_gravity="center">
     <SeekBar
         android:id="@+id/seekBar"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:max="100"
-        android:progress="10"
+        android:layout_margin="10dp"
+        android:max="10"
+        android:progress="0"
         android:progressBackgroundTint="#EB7D07"
         android:progressTint="@color/black"
         android:thumbTint="@color/black"
         />
-
+    <TextView
+        android:id="@+id/myTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:text="Ilosc:"
+        android:textAlignment="center"
+        android:textSize="20dp"
+        android:textColor="@color/black"
+        android:padding="30dp"
+        />
+    </LinearLayout>
+    <Button
+        android:id="@+id/myButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="70dp"
+        android:text="Zloz zamowienie"
+        android:onClick="myButtonClick"
+        android:layout_gravity="center"
+        android:backgroundTint="#BC6712"/>
 </LinearLayout>
