--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,25 +35,26 @@
         android:layout_margin="10dp"
         >
         <RadioButton
-            android:id="@+id/espresso_radiobatton"
+            android:id="@+id/espresso_radiobutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="espresso"
             />
         <RadioButton
-            android:id="@+id/cappucino_radiobatton"
+            android:id="@+id/cappuccino_radiobutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="cappuccino"
             />
         <RadioButton
-            android:id="@+id/latte_radiobatton"
+            android:id="@+id/latte_radiobutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="latte"
             />
     </RadioGroup>
     <ImageView
+        android:id="@+id/my_ImageView"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:contentDescription="old Kotlin"
@@ -102,10 +103,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:layout_margin="20dp"
         android:layout_gravity="center">
     <SeekBar
         android:id="@+id/seekBar"
@@ -121,7 +121,7 @@
     <TextView
         android:id="@+id/myTextView"
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
+        android:layout_height="90dp"
         android:text="Ilosc:"
         android:textAlignment="center"
         android:textSize="20dp"
