--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,18 +107,19 @@
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:layout_gravity="center">
-    <SeekBar
-        android:id="@+id/seekBar"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:max="10"
-        android:progress="0"
-        android:progressBackgroundTint="#EB7D07"
-        android:progressTint="@color/black"
-        android:thumbTint="@color/black"
-        />
-    <TextView
+
+        <SeekBar
+            android:id="@+id/seekBar"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:max="10"
+            android:progress="0"
+            android:progressBackgroundTint="#EB7D07"
+            android:progressTint="@color/black"
+            android:thumbTint="@color/black" />
+
+        <TextView
         android:id="@+id/myTextView"
         android:layout_width="wrap_content"
         android:layout_height="90dp"
